apps/pentest-lab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pentest-lab
  labels:
    app.kubernetes.io/name: pentest-lab
    app.kubernetes.io/part-of: kubesecurebox
